styled page for 480px screen size

--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,3 @@
 @import url("/node_modules/materialize-css/dist/css/materialize.min.css");
 @import url("/css/styles.css");
+@import url("/css/queries.css");
