--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,9 @@ section{
     background-position: center center;
     width: 100%;
     height: 700px;
+    max-height: 700px;
 }
+
 .header-title{
     color: white;
     font-size: 80px;
@@ -75,6 +77,10 @@ section{
     color: white;
     font-size: 14px;
     margin: 30px 0 20px 0;
+}
+
+.showcase-container, .showcase2-container{
+    min-height: 485px;
 }
 
 
@@ -117,11 +123,6 @@ section{
     background-position: center center;
     height: 300px;
 }
-
-.signup-wrapper{
-    height: 500px;
-}
-
 
 .testimonial-wrapper{
     width: 70%;
