--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,16 @@ body{
 }
 
 section{
-    padding-top: 40px;
+    padding-top: 30px;
 }
 
+.feature-section, .showcase2-container, .call-to-action, .signup-wrapper{
+    padding: 30px 0;
+}
+
+.row{
+    margin-bottom: 0; 
+}
 
 .container-wide{
     padding: 0 5%;
@@ -15,7 +22,12 @@ section{
     display: flex;
 }
 
+.nav-wrapper i{
+    padding-top: 15px;
+}
+
 .logo-img{
+    position: static;
     margin: 0 auto;
     padding-top: 22px; 
     height: auto; 
@@ -26,10 +38,6 @@ section{
     padding-left: 5px;
 }
 
-.input-field{
-    margin: 0;
-}
-
 .nav-buttons{
     display: inline;
 }
@@ -37,6 +45,42 @@ section{
 .container-short{
     width: 50%;
     margin: 0 auto;
+}
+
+.sidebar{
+    height: 100%;
+    width: 200px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    overflow-x: hidden;
+    transition: transform 0.5s cubic-bezier(0.4, 0.0, 0.2, 1);
+    transform: translateX(-100%);
+}
+
+.sidebar-wrapper{
+    width: 100%;
+    height: 100%;
+}
+
+.sidebar-header{
+    width: 100%;
+    padding: 40px 0px;
+}
+
+.sidebar-content{
+    padding: 25px 20px;
+}
+
+.sidebar-content a{
+    margin-top: 15px;
+}
+
+.sidebar-link{
+    font-size: 20px;
+    padding: 10px;
+    color: rgba(0,0,0,.5)
 }
 
 #index-banner{
@@ -78,11 +122,6 @@ section{
     font-size: 14px;
     margin: 30px 0 20px 0;
 }
-
-.showcase-container, .showcase2-container{
-    min-height: 485px;
-}
-
 
 .showcase-img{
     display: block;
@@ -135,10 +174,13 @@ section{
     font-weight: 100;
 }
 
+.testimonial-wrapper strong{
+    float: left;
+}
+
 .form-wrapper{
     width: 80%;
     margin: 0 auto;
-
 }
 
 .signup-form{
@@ -152,16 +194,16 @@ section{
     font-weight: 100;
     font-size: 10px;
     text-align: center;
+    margin-top: 20px; 
 }
 
 
 .footer-wrapper{
-    position: relative;
     background-image: url("/images/Footerbg.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    height: 400px;
+    max-height: 400px;
 }
 
 .footer-social-wrapper{
@@ -174,7 +216,7 @@ section{
 }
 
 .footer-copyright{
-    position: absolute;
+    margin: 60px 0 0 0;
     width: 100%;
     bottom: 0;
 }
@@ -186,5 +228,16 @@ section{
 
 .footer-copyright>p{
     font-size: 12px;
-    padding-bottom: 10px;
+}
+
+#sidebar-overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,.5);
+    opacity: 0;
+    transition: opacity 0.2s cubic-bezier(0.0, 0.0, 0.2, 1);
+    pointer-events: none;
 }
