--- a/css/queries.css
+++ b/css/queries.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 600px) {
 
     .sm-logo-center{
         width: 100%;
@@ -13,14 +13,14 @@
     }
 
     .header-title{
-        font-size: 34px;
+        font-size: 2.3em;
         padding-top: 0;
     }
 
     .header-subtitle{
         width: 70%;
         margin: 0 auto;
-        font-size: 12px;
+        font-size: 1em;
     }
 
     .play-button{
@@ -91,10 +91,58 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 601px) and (max-width: 1000px) {
 
-}
+    .container-short{
+        width: 80%;
+    }
 
-@media screen and (max-width: 1024px) {
+    .header-title{
+        font-size: 4em;
+    }
 
+    .header-subtitle{
+        font-size: 1em;
+    }
+
+    .showcase-container{
+        display: flex;
+        height: 640px;
+    }
+
+    .showcase2-container{
+        display: flex;
+        height: 550px;
+        margin-bottom: 20px;
+    }
+
+    .showcase1-wrapper, .showcase2-wrapper{
+        margin: 0 auto;
+    }
+
+    .showcase-text, .showcase-para{
+        text-align: center;
+    }
+
+    .sm-relative{
+        position: relative;
+    }
+
+    .sm-absolute{
+        position: absolute;
+        bottom: 0;
+    }
+
+    .md-center-align{
+        width: 85%;
+        margin: 0 auto;
+    }
+
+    .testimonial-wrapper, .form-wrapper{
+        width: 100%;
+    }
+
+    .signup-form{
+        margin: 10px;
+    }
 }
