--- a/css/queries.css
+++ b/css/queries.css
@@ -131,10 +131,13 @@
     .sm-absolute{
         position: absolute;
         bottom: 0;
+        left: 50%;
+        right: 50%;
+        transform: translate(-50%);
     }
 
     .md-center-align{
-        width: 85%;
+        width: 100%;
         margin: 0 auto;
     }
 
