--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,10 @@ section{
     margin: 30px 0 20px 0;
 }
 
+.card .card-title {
+    font-size: 1.2em;
+}
+
 .showcase-img{
     display: block;
     max-width: 450px;
