--- a/css/queries.css
+++ b/css/queries.css
@@ -4,14 +4,6 @@
         width: 100%;
     }
 
-    #index-banner{
-        height: 550px;
-    }
-
-    .container-short{
-        width: 100%;
-    }
-
     .header-title{
         font-size: 2.3em;
         padding-top: 0;
@@ -28,7 +20,7 @@
     }
 
     .input-form-wrapper{
-        width: 90%;
+        width: calc(100% - 40%);
         margin: 0 auto;
     }
 
@@ -49,7 +41,7 @@
 
     .showcase-img{
         max-width: 350px;
-    }
+    } 
 
     .sm-relative{
         position: relative;
@@ -93,9 +85,6 @@
 
 @media screen and (min-width: 601px) and (max-width: 1000px) {
 
-    .container-short{
-        width: 80%;
-    }
 
     .header-title{
         font-size: 4em;
