--- a/css/styles.css
+++ b/css/styles.css
@@ -14,12 +14,23 @@ section{
     margin-bottom: 0; 
 }
 
+.container{
+    width: calc(100% - 10%);
+}
+
 .container-wide{
-    padding: 0 5%;
+    width: calc(100% - 5%);
+    margin: 0 auto;
+}
+
+.container-short{
+    width: calc(100% - 20%);
+    margin: 0 auto;
 }
 
 .nav-wrapper{
     display: flex;
+    padding-top: 0.2%;
 }
 
 .nav-wrapper i{
@@ -40,11 +51,6 @@ section{
 
 .nav-buttons{
     display: inline;
-}
-
-.container-short{
-    width: 50%;
-    margin: 0 auto;
 }
 
 .sidebar{
@@ -89,14 +95,15 @@ section{
     background-repeat: no-repeat;
     background-position: center center;
     width: 100%;
-    height: 700px;
+    height: 100%;
+    padding: 7% 0;
     max-height: 700px;
 }
 
 .header-title{
     color: white;
     font-size: 80px;
-    padding-top: 100px;
+    margin-top: 0; 
     margin-bottom: 10px;
 }
 
@@ -121,6 +128,11 @@ section{
     color: white;
     font-size: 14px;
     margin: 30px 0 20px 0;
+}
+
+.input-form-wrapper{
+    width: calc(100% - 70%);
+    margin: 0 auto;
 }
 
 .card .card-title {
